--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Configurar credenciales AWS
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AKIA4IM3HTCRCZYP62EA }} #agregar id de AWS
-          aws-secret-access-key: ${{ secrets.1LZrqT5lcHoJUNJsyWZQHzTGXbNBZ5OukMd5ygA5 }} #agregar contraseña AWS
+          aws-access-key-id: ${{ AKIA4IM3HTCRCZYP62EA }} #agregar id de AWS
+          aws-secret-access-key: ${{ 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 }} #agregar contraseña AWS
           aws-region: us-east-2  # Cambia por tu región de AWS tambien modificar demás cosas
 
       - name: Login en Amazon ECR
