--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,32 +1,24 @@
-name: Deploy
+deploy:
+  needs: build
+  runs-on: ubuntu-latest
 
-on:
-  push:
-    branches:
-      - backend-jesus-mediapp
+  steps:
+    - name: Configurar credenciales AWS
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} #agregar id de AWS
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} #agregar contraseña AWS
+        aws-region: us-east-1  # Cambia por tu región de AWS tambien modificar demás cosas
 
-jobs:
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
+    - name: Login en Amazon ECR
+      run: |
+        aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin <TU_ID_ECR>.dkr.ecr.us-east-1.amazonaws.com
 
-    steps:
-      - name: Configurar credenciales AWS
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AKIA4IM3HTCRCZYP62EA }} #agregar id de AWS
-          aws-secret-access-key: ${{ secrets.1LZrqT5lcHoJUNJsyWZQHzTGXbNBZ5OukMd5ygA5 }} #agregar contraseña AWS
-          aws-region: us-east-2  # Cambia por tu región de AWS tambien modificar demás cosas
+    - name: Subir imagen a Amazon ECR
+      run: |
+        docker tag mediapp-backend <TU_ID_ECR>.dkr.ecr.us-east-1.amazonaws.com/mediapp-backend:latest #
+        docker push <TU_ID_ECR>.dkr.ecr.us-east-1.amazonaws.com/mediapp-backend:latest
 
-      - name: Login en Amazon ECR
-        run: |
-          aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin AKIA4IM3HTCRCZYP62EA.ecr.us-east-2.amazonaws.com
-
-      - name: Subir imagen a Amazon ECR
-        run: |
-          docker tag backend_mediapp:latest AKIA4IM3HTCRCZYP62EA.dkr.ecr.us-east-2.amazonaws.com/repo-mediapp-backend:latest
-          docker push AKIA4IM3HTCRCZYP62EA.dkr.ecr.us-east-2.amazonaws.com/repo-mediapp-backend:latest
-
-      - name: Actualizar la tarea en ECS
-        run: |
-          aws ecs update-service --cluster mediapp-cluster --service mediapp-service --force-new-deployment
+    - name: Actualizar la tarea en ECS
+      run: |
+        aws ecs update-service --cluster mediapp-cluster --service mediapp-service --force-new-deployment
