--- a/.env
+++ b/.env
@@ -20,11 +20,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
 DB_DATABASE=mediapp
 DB_USERNAME=postgres
-DB_PASSWORD=root
+DB_PASSWORD=asdasdasd123
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -55,8 +55,8 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=AKIA4IM3HTCRCZYP62EA
+AWS_SECRET_ACCESS_KEY=1LZrqT5lcHoJUNJsyWZQHzTGXbNBZ5OukMd5ygA5
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
